--- a/components/compstyles/FasterTransactions.module.css
+++ b/components/compstyles/FasterTransactions.module.css
@@ -1,18 +1,18 @@
 /** @format */
 
-.faster_transactions {
-}
 .faster_transactions_maincontainer {
 	background-image: url("../../public/landingpageasserts/blacksvg_bg.svg");
-	background-color: #CD5B09;
-	  background-blend-mode: screen;
-	height: 404.94px;
+	background-color: #cd5b09;
+	background-blend-mode: screen;
+	position: relative;
+	height: 389.94px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	padding: 2rem 2rem;
+	padding: 1rem 2rem;
 	display: flex;
-	gap: 2rem;
+	/* justify-content: space-between; */
+	/* gap: 2rem; */
 	margin-bottom: 4rem;
 }
 
@@ -25,7 +25,7 @@
 	width: 60%;
 }
 .faster_transactions_leftcontent_paragraph {
-	color: #FDE7D8;
+	color: #fde7d8;
 	font-size: 24px;
 	line-height: 32px;
 	font-style: bold;
@@ -65,7 +65,7 @@
 }
 .faster_transactions_rightcontent img {
 	position: absolute;
-	right: 100px;
+	right: 0;
 }
 .faster_transactions_secondcontainer_firstcontent {
 	height: 410px;
@@ -77,72 +77,7 @@
 	color: #151517;
 	width: 40%;
 }
-.doubleblock {
-	position: absolute;
-	left: 380px;
-	top: 600px;
-	animation: bouncing2 2s ease-in-out infinite;
-}
 
-@keyframes bouncing2 {
-	0% {
-		transform: translateY(1px);
-	}
-
-	50% {
-		transform: translateY(-50px);
-		filter: drop-shadow(-10px 70px 10px #ededff);
-	}
-
-	100% {
-		transform: translateY(2px);
-	}
-}
-
-.singleblock_one {
-	position: absolute;
-	top: 600px;
-	right: 10px;
-	/* top: 130px; */
-	animation: bouncing1 1.5s ease-in-out infinite;
-}
-
-@keyframes bouncing1 {
-	0% {
-		transform: translateY(5px);
-	}
-
-	50% {
-		transform: translateY(-30px);
-		filter: drop-shadow(-10px 70px 10px #ededff);
-	}
-
-	100% {
-		transform: translateY(6px);
-	}
-}
-.singleblock_two {
-	position: absolute;
-	/* top: 110px; */
-	bottom: 130px;
-	right: 240px;
-	animation: bouncing3 1s ease-in-out infinite;
-}
-
-@keyframes bouncing3 {
-	0% {
-		transform: translateY(1px);
-	}
-
-	50% {
-		transform: translateY(-30px);
-		filter: drop-shadow(-10px 70px 10px #ededff);
-	}
-
-	100% {
-		transform: translateY(0);
-	}
-}
 .faster_transactions_secondcontainer_secondcontent {
 	display: flex;
 	justify-content: center;
@@ -163,14 +98,21 @@
 	font-style: bold;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1000px) {
 	.faster_transactions {
 		padding: 2rem 1rem;
 	}
 	.faster_transactions_maincontainer {
 		flex-direction: column;
-		gap: 0rem;
 		height: 788px;
+	}
+	.faster_transactions_rightcontent{
+		display: grid;
+		place-items: center;
+	}
+	.faster_transactions_rightcontent img {
+		position: static;
+		
 	}
 	.faster_transactions_leftcontent_heading {
 		width: 100%;
@@ -186,10 +128,10 @@
 		flex-direction: column;
 		gap: 1rem;
 	}
-	.faster_transactions_rightcontent img {
+	/* .faster_transactions_rightcontent img {
 		max-width: 100%;
 		height: auto;
-	}
+	} */
 	.singleblock_one {
 		display: none;
 	}
@@ -210,12 +152,24 @@
 	}
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 500px) {
+	.faster_transactions_rightcontent img {
+		margin: 1rem 0rem;
+		position: static;
+		width: 350px;
+	}
+}
+
+@media screen and (max-width: 450px) {
 	.faster_transactions_rightcontent img {
 		margin: 1rem 0rem;
 		position: static;
 		width: 250px;
 	}
+		.faster_transactions_maincontainer {
+			padding: 0 1rem;
+			height: auto;
+		}
 }
 
 .faster_transactions_faq {
